# Led-Matrix-Webex

./: .cursorignore  .gitignore  .mcp.json  AZURE_SETUP_COMPLETE.md  DYNAMIC_CI_IMPLEMENTATION.md  FINAL_INTEGRATION_GUIDE.md  FIRMWARE_CODE_REVIEW.md  FIXES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INSTALL_WIZARD_REFACTOR.md  MDNS_VERIFICATION_REPORT.md  PLAN_COMPLETION_STATUS.md  PLAN_VALIDATION_REPORT.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  REFACTOR_COMPARISON.md  REFACTOR_COMPLETE.md  REFACTOR_FINAL_STATUS.md  SECURITY_FIXES_APPLIED.md  UUID_DEPLOYMENT_GUIDE.md  UUID_IMPLEMENTATION_COMPLETE.md  UUID_TESTING_GUIDE.md  WEBSITE_ACTION_ITEMS.md  WEBSITE_REFACTOR_VERIFICATION_REPORT.md  WEBSOCKET_ENDPOINTS_VERIFICATION.md  WEB_UI_VERSION_DISPLAY_FIX.md  boards.json  boards.yaml  fix-oauth-callback-url.sh  pyproject.toml  pyrightconfig.json  repository.yaml
.cursor/: comprehensive_code_review_bc1be869.plan.md  environment.json
.github/: dependabot.yml
bridge/: .dockerignore  .eslintrc.js  AZURE.md  Dockerfile.azure  MDNS_DISCOVERY.md  MDNS_FIX_SUMMARY.md  MDNS_VERIFICATION_CHECKLIST.md  README.md  README_AZURE.md  azure-cost-estimate.js  azure-deploy.sh  env.example  install-azure-cli.sh  jest.config.js  package-lock.json  package.json  pre-deployment-check.sh  setup-azure-cicd.sh  setup-github-actions.sh  test_mdns.js
docs/: AUTH_HOOK_CONFIGURATION.md  AUTH_HOOK_STATUS.md  CONTENT_FEEDS_ARCHITECTURE.md  DATABASE_SCHEMA_DESIGN.md  SUPABASE_AUTH_VALIDATION.md  TESTING.md  azure_ci_cd.md  azure_deployment.md  bridge_deployment.md  bridge_deprecation.md  bridge_reconnection_fix.md  bridge_runtime_config_fix.md  (+18 more)
(+751 files in other folders)
